Hw3/BACKUPS/backup2/ASTGen.java
/* Generated By:JavaCC: Do not edit this line. ASTGen.java */
public class ASTGen implements ASTGenConstants {
        public static void main(String args[]) throws ParseException {
                new ASTGen(System.in);
                Class [] Classes = Top();
                Class.indent(new IndentOutput(System.out), 0, classes);
                System.out.println("Input is valid");
        }

//-- Define the grammatical rules of the input language: ---------------------
  static final public Class [] Top() throws ParseException {
                  Class [] classes;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 1:
    case 2:
      classes = Classes(0);
      break;
    default:
      jj_la1[0] = jj_gen;
                               {if (true) return new Class[0];}
    }
    jj_consume_token(0);
                                                             {if (true) return classes;}
    throw new Error("Missing return statement in function");
  }

  static final public Class [] Classes(int soFar) throws ParseException {
                               Class c; Class [] classes;
    c = Class();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 1:
    case 2:
      classes = Classes(soFar+1);
      break;
    default:
      jj_la1[1] = jj_gen;
                                                 classes = new Class[soFar+1];
    }
          classes[soFar] = c; {if (true) return classes;}
    throw new Error("Missing return statement in function");
  }

  static final public Class Class() throws ParseException {
                 boolean isAbstract; String name; Class [] subclasses; Args args;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 1:
      jj_consume_token(1);
                     isAbstract = true;
      break;
    default:
      jj_la1[2] = jj_gen;
                                            isAbstract = false;
    }
    jj_consume_token(2);
    name = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 3:
      jj_consume_token(3);
      args = Args();
      jj_consume_token(4);
      break;
    default:
      jj_la1[3] = jj_gen;
                                args = null;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 5:
    case 6:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 5:
        jj_consume_token(5);
        subclasses = Classes(0);
        break;
      case 6:
                                         subclasses = new Class[0];
        jj_consume_token(6);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[5] = jj_gen;
                                                                             {if (true) return new Class(isAbstract, name, args, null);}
    }
         {if (true) return new Class(isAbstract, name, args, subclasses);}
    throw new Error("Missing return statement in function");
  }

  static final public Args Args() throws ParseException {
               Args before; Arg last;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
    case 9:
    case 10:
    case IDENT:
      last = Arg();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 7:
        jj_consume_token(7);
                           before = new Args(Args(), last);
        break;
      default:
        jj_la1[6] = jj_gen;
                                                                before = new Args(null, last);
      }
      break;
    default:
      jj_la1[7] = jj_gen;
           before = new Args(null, null);
    }
         {if (true) return before;}
    throw new Error("Missing return statement in function");
  }

  static final public Arg Arg() throws ParseException {
             Token token; String vis, id; Type t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      token = jj_consume_token(8);
                           vis = token.image;
      break;
    case 9:
      token = jj_consume_token(9);
                                vis = token.image;
      break;
    case 10:
      token = jj_consume_token(10);
                              vis = token.image;
      break;
    default:
      jj_la1[8] = jj_gen;
            vis = null;
    }
    t = Type();
    id = Id();
         {if (true) return new Arg(vis, t, id);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
               String [] str; NameType nt; Type t;
    //NameType() ("[" "]")*
            str = NameType(0);
                nt = new NameType(str);
                t = (Type) nt;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
      jj_consume_token(12);
                  {if (true) return new ArrayType(t);}
      break;
    default:
      jj_la1[9] = jj_gen;
                                               {if (true) return nt;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public String [] NameType(int soFar) throws ParseException {
                                 String [] s; String str;
    //Id() ("." Id())*
    
            str = Id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
      s = NameType(soFar+1);
      break;
    default:
      jj_la1[10] = jj_gen;
                                              s = new String[soFar + 1];
    }
          s[soFar] = str; {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public String Id() throws ParseException {
               Token t;
    t = jj_consume_token(IDENT);
                {if (true) return(t.image);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ASTGenTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x6,0x6,0x2,0x8,0x60,0x60,0x80,0x100700,0x700,0x800,0x2000,};
   }

  /** Constructor with InputStream. */
  public ASTGen(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ASTGen(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ASTGenTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ASTGen(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ASTGenTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ASTGen(ASTGenTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ASTGenTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[23];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 11; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 23; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
